tests/cases/errors/unsupported_type/main.sv
module Top;
  bit [7:0] x;
endmodule
